--- a/TL_youtubeSummarizer/popup.html
+++ b/TL_youtubeSummarizer/popup.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <style>
     body {
-      width: 320px;
+      width: 350px;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       padding: 15px;
       background-color: #f9f9f9;
+      display: flex;
+      flex-direction: column;
+      height: auto;
+      max-height: 600px;
     }
+
     h2 {
       margin-top: 0;
       color: #333;
       font-size: 18px;
     }
+
     .form-group {
       margin-bottom: 12px;
     }
+
     label {
       display: block;
       margin-bottom: 5px;
@@ -23,6 +31,7 @@
       font-weight: 600;
       color: #555;
     }
+
     input[type="text"],
     input[type="password"],
     select {
@@ -33,6 +42,7 @@
       font-size: 13px;
       box-sizing: border-box;
     }
+
     button {
       width: 100%;
       padding: 10px;
@@ -44,13 +54,31 @@
       font-weight: 600;
       margin-top: 10px;
     }
+
     button:hover {
       background-color: #1d4ed8;
     }
+
     button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
+      background-color: #ccc;
+      cursor: not-allowed;
     }
+
+    #secondary-actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .secondary-btn {
+      background-color: #4b5563;
+      margin-top: 0;
+    }
+
+    .secondary-btn:hover {
+      background-color: #374151;
+    }
+
     #status {
       margin-top: 15px;
       font-size: 12px;
@@ -58,17 +86,38 @@
       word-wrap: break-word;
       white-space: pre-wrap;
     }
+
     .success {
-        color: #16a34a !important;
+      color: #16a34a !important;
     }
+
     .error {
-        color: #dc2626 !important;
+      color: #dc2626 !important;
+    }
+
+    #result-container {
+      margin-top: 15px;
+      display: none;
+    }
+
+    #result-text {
+      width: 100%;
+      height: 150px;
+      font-family: monospace;
+      font-size: 11px;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      resize: vertical;
+      box-sizing: border-box;
+      background-color: #fff;
     }
   </style>
 </head>
+
 <body>
   <h2>YouTube Summarizer</h2>
-  
+
   <div class="form-group">
     <label for="apiKey">DeepSeek API Key</label>
     <input type="password" id="apiKey" placeholder="Enter your API Key">
@@ -89,9 +138,20 @@
   </div>
 
   <button id="summarizeBtn">Summarize Video</button>
-  
+
   <div id="status"></div>
+
+  <div id="result-container">
+    <label for="result-text">Generated Summary</label>
+    <textarea id="result-text" readonly></textarea>
+
+    <div id="secondary-actions">
+      <button id="copyBtn" class="secondary-btn">Copy to Clipboard</button>
+      <button id="clearBtn" class="secondary-btn" style="background-color: #dc2626;">Clear</button>
+    </div>
+  </div>
 
   <script src="popup.js"></script>
 </body>
+
 </html>
